improved organization and documentation
